fix read more/view post arrow alignment

--- a/src/_includes/style/_theme.css
+++ b/src/_includes/style/_theme.css
@@ -72,6 +72,9 @@ a.view-post:after {
   display: inline-block;
   margin-left: 0.4rem;
   text-decoration: none;
+
+  position: relative;
+  top: 0.05rem;
 }
 
 ul, ol {
